add custom grouping

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
   <app-table-template
     [templateRows]="rootTemplateRows"
     [templateColumns]="rootTemplateColumns"
-    [tempateRowLegend]="rootRowLegend"
+    templateMode= "subHeader"
   >
   </app-table-template>
 </div>
