add pipe mode for all nambers data table

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,9 @@
   <app-table-template
     [templateRows]="rootTemplateRows"
     [templateColumns]="rootTemplateColumns"
-    templateMode="subHeader"
+    [tempateRowLegend]="rootRowLegend"
+    templateMode='standartMode'
+    templetePipeMode="allNumbers"
   >
   </app-table-template>
 </div>
