--- a/src/app/table-template/table-template.component.html
+++ b/src/app/table-template/table-template.component.html
@@ -4,7 +4,11 @@
     [rows]="templateRows"
     [columnMode]="'standart'"
     >
-    <ngx-datatable-column *ngFor="let col of columns; let i = index" [name]="col.name" [prop]="col.prop" [width]="templateColumnWidth[i]">
+    <ngx-datatable-column *ngFor="let col of columns; let i = index" [name]="col.name" [width]="templateColumnWidth[i]">
+      <ng-template let-row="row" ngx-datatable-cell-template>
+        <div *ngIf="templetePipeMode=='allNumbers'">{{ row[col.prop] | number: '1.2-2' }}</div>
+        <div> {{ row[col.prop]}}</div>
+      </ng-template>
     </ngx-datatable-column>
   </ngx-datatable>
 </div>
@@ -15,7 +19,11 @@
     [rows]="templateRows"
     [columnMode]="'force'"
   >
-    <ngx-datatable-column *ngFor="let col of columns" [name]="col.name" [prop]="col.prop">
+    <ngx-datatable-column *ngFor="let col of columns" [name]="col.name">
+      <ng-template let-row="row" ngx-datatable-cell-template>
+        <div *ngIf="templetePipeMode=='allNumbers'">{{ row[col.prop] | number: '1.2-2' }}</div>
+        <div> {{ row[col.prop]}}</div>
+      </ng-template>
     </ngx-datatable-column>
   </ngx-datatable>
 </div>
@@ -38,8 +46,13 @@
 
    <ngx-datatable-column *ngFor="let col of columns" [name]="col.name" >
       <ng-template let-row="row" ngx-datatable-cell-template>
-         <div> {{ row[col.prop]}}</div>
+        <div *ngIf="templetePipeMode=='allNumbers'">{{ row[col.prop] | number: '1.2-2' }}</div>
+        <div> {{ row[col.prop]}}</div>
       </ng-template>
     </ngx-datatable-column>
   </ngx-datatable>
+  <ng-template>
+    <div> number</div>
+  </ng-template>
 </div>
+
