--- a/src/app/table-template/table-template.component.css
+++ b/src/app/table-template/table-template.component.css
@@ -1,1 +1,41 @@
+@import '~@swimlane/ngx-datatable/release/index.css';
+@import '~@swimlane/ngx-datatable/release/themes/bootstrap.css';
+@import '~@swimlane/ngx-datatable/release/assets/icons.css';
+@import '~@swimlane/ngx-datatable/release/themes/material.css';
+
+
+.ngx-datatable.table-template,
+.ngx-datatable.table-template--sub-header{
+  box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2), 0 8px 10px 1px rgba(0, 0, 0, 0.14), 0 3px 14px 2px rgba(0, 0, 0, 0.12);
+  -webkit-border-top-left-radius: 10px;
+  -webkit-border-top-right-radius: 10px;
+  -moz-border-radius-topleft: 10px;
+  -moz-border-radius-topright: 10px;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+  font-size: 13px;
+}
+
+::ng-deep .table-template datatable-body-cell,
+::ng-deep .table-template--sub-header datatable-body-cell{
+  padding: 0 0 0 10px;
+  border-bottom: 1px solid #ededed;
+}
+
+::ng-deep .table-template--sub-header datatable-header,
+::ng-deep .table-template datatable-header{
+  padding: 0 0 0 10px;
+  background-color: #ededed;
+}
+
+::ng-deep .table-template--sub-header .datatable-group-header {
+  height: 30px;
+  text-transform: uppercase;
+}
+::ng-deep .table-template--sub-header datatable-body-row:hover,
+::ng-deep .table-template datatable-body-row:hover{
+  background-color: aliceblue;
+  cursor: pointer;
+}
+
 
